--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,4 +22,35 @@
         android:name="com.dicoding.kotlin.mynavigationdrawer.ui.slideshow.SlideshowFragment"
         android:label="@string/menu_slideshow"
         tools:layout="@layout/fragment_slideshow" />
+
+    <fragment
+        android:id="@+id/nav_tools"
+        android:name="com.dicoding.kotlin.mynavigationdrawer.ToolsFragment"
+        android:label="@string/menu_tools"
+        tools:layout="@layout/fragment_tools" />
+
+    <fragment
+        android:id="@+id/nav_share"
+        android:name="com.dicoding.kotlin.mynavigationdrawer.ShareFragment"
+        android:label="@string/menu_share"
+        tools:layout="@layout/fragment_share" />
+
+    <fragment
+        android:id="@+id/nav_send"
+        android:name="com.dicoding.kotlin.mynavigationdrawer.SendFragment"
+        android:label="@string/menu_send"
+        tools:layout="@layout/fragment_send" />
+
+    <fragment
+        android:id="@+id/nav_cart"
+        android:name="com.dicoding.kotlin.mynavigationdrawer.CartFragment"
+        android:label="@string/menu_cart"
+        tools:layout="@layout/fragment_cart" />
+
+    <activity
+        android:id="@+id/nav_subway"
+        android:name="com.dicoding.kotlin.mynavigationdrawer.SubwayActivity"
+        android:label="@string/menu_subway"
+        tools:layout="@layout/activity_subway" />
+
 </navigation>
